front end home cards-container css class overlapping with teachers cards fixed

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -52,7 +52,7 @@
   padding: 80px 0;
 }
 
-.cards-container {
+.home-cards-container {
   width: 500px;
   margin: 0 auto;
   grid-template-columns: 1fr 1fr;
